# Meditrib

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  environment.yml  meditrib.db  nginx.conf  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  ruff.toml  run.py  setup.py
.agent/: architecture.md  conventions.md
.agent/docs/: multi-tenancy.md
.agent/rules/: rules.md
.agent/workflows/: db_management.md  deploy.md  setup_dev.md
alembic/versions/: 20251217_0234_initial_schema.py
app/: layout.tsx  page.jsx
app/about/: page.jsx
backend/: README.md  crud.py  init_db.py  main.py  models.py  schemas.py  seed_data.py
backend/core/: README.md  backup.py  config.py  database.py  dependencies.py  logging_config.py  middleware.py  models.py  password.py  schemas.py  security.py
backend/migrations/: add_company_fields.py  add_new_fields_migration.py  remove_name_unique.py  run_migration.py
backend/reports/: excel.py  pdf.py
backend/routers/: README.md  alerts.py  auth.py  backups.py  batches.py  clients.py  companies.py  expenses.py  invoices.py  medicine_tags.py  medicines.py  onboarding.py  product_tags.py  products.py  (+6 more)
frontend/: README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
logs/: meditrib.log.2025-12-02  meditrib.log.2025-12-05  meditrib_error.log.2025-12-02  system_monitor.log.2025-12-02  system_monitor.log.2025-12-05
server/: package.json  pnpm-lock.yaml  tsconfig.json
tests/: conftest.py
(+215 files in other folders)
